--- a/css/app.css
+++ b/css/app.css
@@ -54,6 +54,10 @@ h2 {
     background-color: #d32f2f;
 }
 
+#bermuda {
+    background-color: blue;
+}
+
 .destination:hover h2 {
     transform: rotate(0deg);
 }
